  - get_site_data_from_pedon_db() : site and pedon aggregate data
  - get_hz_data_from_pedon_db() : horizon level data
  - get_colors_from_pedon_db() : formats and mixes multiple colors / horizon
  + implemented in mix_and_clean_colors()

* test_hz_logic() : basic function for testing horizon logic, returns TRUE/FALSE by ID
-------------------------- aqp 0.99-4 (2011-08-15) --------------------------
* code and documentation clean-up
* Soil Sata Access (SDA) query functions have been added
  - mapunit_geom_by_ll_bbox() : get map unit geometry by bounding box
  - MUKEYS_by_ll_bbox() : get map unit keys by bounding box
  - SDA_query() : retrieve soil tabular data via query written in SQL
* additional customizations added to profile_plot
* two new sample data sets + examples

-------------------------- aqp 0.99-1 (2011-01-26) --------------------------
* soil.slot() and profile_compare() now have support for parallel computation thanks to bug-fixes in plyr 1.4
  - plyr >= 1.4, foreach, and doMC packages are required
  - specific examples are not yet documented, but should be soon
  - this feature is still experimental! testing is advised
* profile_compare() now calculates slice-wise dissimilarity matrices in 1/3 the time (thanks llply!)

-------------------------- aqp 0.98-4 (2010-12-15) --------------------------
* fixed minor bug in soil.slot() when computing probabilities from profiles that had
  missing horizons and that had only a single class within the variable to be aggregated

-------------------------- aqp 0.98-1 (2010-11-23) --------------------------
* added basic demo: demo(aqp)
* soil.slot() now computes aggregate probabilities over user-defined segments
* re-write of weighted profile aggregation functions
  - aqp package now requires Hmisc package
  - using Hmisc::wtd.{mean,var,quantile} to compute values
	+ better adjustment of weights when computing weighted SD
	+ fixes long-standing bugs with wt. mean/SD when NA present in x_i and not in wt_i